<resources>
    <string name="app_name">Bike To Life</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Email">Email</string>
    <string name="Mot_de_passe">Mot de passe</string>
    <string name="Name">Nom</string>
    <string name="Surname">Prenom</string>
    <string name="ComfirmPassword">Comfirmer le mot de passe </string>
    <string name="years">age</string>
    <string name="weigth">poids</string>
    <string name="heigth">Taille en centimétres</string>
    <string name="CreateAccount">Creer un compte</string>
    <string name="sign_up">Sign up</string>
    <string name="connected">se connecter</string>
    <string name="socials">Se connecter avec : </string>
    <string name="socials1">Facebook</string>
    <string name="socials2">Twitter</string>
    <string name="socials3">Gmail</string>


</resources>
